<resources>
    <string name="app_name">一天</string>
    <string name="radio_home">句子</string>
    <string name="radio_thought">记录</string>
    <string name="radio_plan">计划</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="main_begin">进入</string>
    <string name="name">请输入账号</string>
    <string name="password">请输入密码</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="plan_title">坚持做到计划日日清</string>
    <string name="plan_button">添加计划</string>
    <string name="newin">新建临时进入号</string>
    <string name="newuser">新建</string>
    <string name="sure">确认</string>
    <string name="plan">请输入新计划</string>
    <string name="delete">清空今日计划</string>
    <string name="begin_plan">开始今日计划</string>
    <string name="zhuce_over">已有账号立即登录</string>
    <string name="zhuce_in">注册</string>>
</resources>
